# non-tech-commit-tracker

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/notion_commit_tracker/: __main__.py  analyzer.py
